computer_science/knowledge/devops/Kubernetes/istio/demo/backend-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-v1
  labels:
    app: backend-v1
    service: backend-v1
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: backend-v1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-v1
      version: v1
  template:
    metadata:
      labels:
        app: backend-v1
        version: v1
    spec:
      serviceAccountName: backend-v1
      containers:
        - image: gcr.io/k8s-staging-ingressconformance/echoserver:v20221109-7ee2f3e
          imagePullPolicy: IfNotPresent
          name: backend-v1
          ports:
            - containerPort: 3000
