computer_science/knowledge/devops/Kubernetes/istio/demo/backend-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-v2
  labels:
    app: backend-v2
    service: backend-v2
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: backend-v2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-v2
      version: v2
  template:
    metadata:
      labels:
        app: backend-v2
        version: v2
    spec:
      serviceAccountName: backend-v2
      containers:
        - image: gcr.io/k8s-staging-ingressconformance/echoserver:v20221109-7ee2f3e
          imagePullPolicy: IfNotPresent
          name: backend-v2
          ports:
            - containerPort: 3000
