computer_science/knowledge/devops/Kubernetes/istio/demo/host.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: v1-vs
spec:
  hosts:
  - "v1.example.com"
  gateways:
  - app-gateway
  http:
  - match:
    route:
    - destination:
        host: backend-v1
        port:
          number: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: v2-vs
spec:
  hosts:
  - "v2.example.com"
  gateways:
  - app-gateway
  http:
  - match:
    route:
    - destination:
        host: backend-v2
        port:
          number: 3000
