computer_science/knowledge/devops/Kubernetes/istio/demo/path.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: v1-vs-path
spec:
  hosts:
  - "api.example.com"
  gateways:
  - app-gateway
  http:
  - match:
    - uri:
        prefix: /v1
    route:
    - destination:
        host: backend-v1
        port:
          number: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: v2-vs-path
spec:
  hosts:
  - "api.example.com"
  gateways:
  - app-gateway
  http:
  - match:
    - uri:
        prefix: /v2
    route:
    - destination:
        host: backend-v2
        port:
          number: 3000
