computer_science/knowledge/devops/Kubernetes/istio/demo/weight.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: v1v2-vs
spec:
  hosts:
  - "api.example.com"
  gateways:
  - app-gateway
  http:
  - route:
    - destination:
        host: backend-v1
      weight: 50
    - destination:
        host: backend-v2
      weight: 50
